pkg/lang/syntax/testdata/ub/valid/selector-body/stack.ub
stack: {
  factory: {
    inputs: {
      greet-config: { prefix: 'hello' }
    }
  }

  state: local {
    bucket: 'unobin-state'
  }

  encryption: noop {}
}
