pkg/lang/syntax/testdata/ub/invalid/duplicate-fields/stack/local-declaration.ub
stack: {
  locals: {
    dup: 'one'
    dup: 'two'
  }
  encryption: noop {}
}
